Updated layout configuration to extend from base Mopa layout

--- a/Resources/config/menu.yml
+++ b/Resources/config/menu.yml
@@ -1,3 +1,8 @@
+# Bootstrap Bundle
+mopa_bootstrap:
+    navbar: ~
+    form: ~
+
 parameters:
     manhattan.console.navbar.generic: Mopa\Bundle\BootstrapBundle\Navbar\GenericNavbar
 
