--- a/composer.json
+++ b/composer.json
@@ -14,13 +14,53 @@
     ],
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.*",
-        "symfony/form": "2.*"
+        "symfony/framework-bundle":     "2.*",
+        "symfony/form":                 "2.*",
+
+        "doctrine-migrations":          "*",
+        "gedmo-doctrine-extensions":    "*",
+        "stfalcon/tinymce-bundle":      "*",
+
+        "mopa/bootstrap-bundle":        "dev-master",
+        "twitter/bootstrap":            "master",
+        "knplabs/knp-paginator-bundle": "dev-master",
+        "knplabs/knp-menu-bundle":      "dev-master",
+        "craue/formflow-bundle":        "dev-master",
+
+        "behat/behat-bundle":             "*",
+        "behat/mink-bundle":              "*"
     },
+    "repositories": [
+        {
+            "type": "package",
+            "package": {
+                "version": "master", /* whatever version you want */
+                "name": "twitter/bootstrap",
+                "source": {
+                    "url": "https://github.com/twitter/bootstrap.git",
+                    "type": "git",
+                    "reference": "master"
+                },
+                "dist": {
+                    "url": "https://github.com/twitter/bootstrap/zipball/master",
+                    "type": "zip"
+                }
+            }
+        }
+    ],
     "autoload": {
         "psr-0": {
-            "Manhattan\\Bundle\\ConsoleBundle": ""
+            "Manhattan\\ConsoleBundle": ""
         }
     },
-    "target-dir": "Manhattan//Bundle//ConsoleBundle"
+    "scripts": {
+        "post-install-cmd": [
+            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrap"
+        ],
+        "post-update-cmd": [
+            "Mopa\\Bundle\\BootstrapBundle\\Composer\\ScriptHandler::postInstallSymlinkTwitterBootstrap"
+        ]
+    }
+    "target-dir": "Manhattan/ConsoleBundle"
+
 }
