Updated composer files to correct package errors.

--- a/composer.json
+++ b/composer.json
@@ -34,7 +34,7 @@
         {
             "type": "package",
             "package": {
-                "version": "2.1.*",
+                "version": "master",
                 "name": "twitter/bootstrap",
                 "source": {
                     "url": "https://github.com/twitter/bootstrap.git",
