--- a/composer.json
+++ b/composer.json
@@ -12,6 +12,12 @@
         }
     ],
     "require": {
+        "symfony/symfony": "2.1.*",
+        "doctrine/doctrine-migrations-bundle": "2.0.x-dev",
+        "gedmo/doctrine-extensions": "2.2.2",
+        "stfalcon/tinymce-bundle": "dev-master"
+    },
+    "require": {
         "php": ">=5.3.2"
     },
     "autoload": {
