--- a/composer.json
+++ b/composer.json
@@ -12,10 +12,8 @@
         }
     ],
     "require": {
+        "php": ">=5.3.2",
         "symfony/symfony": "2.1.*"
-    },
-    "require": {
-        "php": ">=5.3.2"
     },
     "autoload": {
         "psr-0": { "Manhattan\\ConsoleBundle": "" }
