--- a/composer.json
+++ b/composer.json
@@ -11,11 +11,12 @@
             "homepage": "www.frodosghost.com"
         }
     ],
+    "autoload": {
+        "psr-0": { "Manhattan\\Bundle\\ConsoleBundle": "" }
+    },
+    "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
         "symfony/symfony": "2.1.*"
-    },
-    "autoload": {
-        "psr-0": { "Manhattan\\ConsoleBundle": "" }
     }
 }
