--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,6 @@
     "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
-        "symfony/symfony": "2.1.*"
+        "symfony/symfony": ">=2.0"
     }
 }
