Updated settings with menu and layout changes to do with site update.

--- a/Resources/config/menu.yml
+++ b/Resources/config/menu.yml
@@ -1,7 +1,9 @@
 # Bootstrap Bundle
 mopa_bootstrap:
-    navbar: ~
-    form: ~
+    navbar:
+        service: manhattan.console.navbar
+    form:
+        show_legend: false # default is true
 
 parameters:
     manhattan.console.navbar.generic: Mopa\Bundle\BootstrapBundle\Navbar\GenericNavbar
