--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -4,14 +4,22 @@ security:
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
-        ROLE_SUPER_ADMIN: [ROLE_USER, ROLE_ADMIN, ROLE_ALLOWED_TO_SWITCH]
+        ROLE_SUPER_ADMIN: ROLE_ADMIN
 
     providers:
         fos_userbundle:
             id: fos_user.user_manager
 
-    firewalls: 
-        main:
+    firewalls:
+        dev:
+            pattern:  ^/(_(profiler|wdt)|css|images|js)/
+            security: false
+
+        login:
+           pattern:  ^/console/login$
+           security: false
+
+        secured_area:
             pattern:    ^/console/
             form_login:
                 check_path: /console/login_check
@@ -22,5 +30,7 @@ security:
                 target: /console/
 
     access_control:
-        #- { path: ^/login, roles: IS_AUTHENTICATED_ANONYMOUSLY, requires_channel: https }
-        #- { path: ^/_internal, roles: IS_AUTHENTICATED_ANONYMOUSLY, ip: 127.0.0.1 }
+        - { path: ^login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/console/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/console/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        - { path: ^/console/admin/, role: ROLE_ADMIN }
