--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -1,6 +1,7 @@
 security:
     encoders:
         Manhattan\Bundle\ConsoleBundle\Entity\User: sha512
+        #"FOS\UserBundle\Model\UserInterface": sha512
 
     role_hierarchy:
         ROLE_ADMIN:       ROLE_USER
@@ -11,26 +12,27 @@ security:
             id: fos_user.user_manager
 
     firewalls:
-        dev:
-            pattern:  ^/(_(profiler|wdt)|css|images|js)/
-            security: false
+       # dev:
+          #  pattern:  ^/(_(profiler|wdt)|css|images|js)/
+          #  security: false
 
-        login:
-           pattern:  ^/console/login$
-           security: false
+       # login:
+         #  pattern:  ^/login$
+         #  security: false
 
         secured_area:
-            pattern:    ^/console/
+            pattern:    ^/
             form_login:
-                check_path: /console/login_check
-                login_path: /console/login
+                check_path: /login_check
+                login_path: /login
                 provider: fos_userbundle
             logout:
-                path:   /console/logout
-                target: /console/
+                path:   /logout
+                target: /
+            anonymous: ~
 
     access_control:
-        - { path: ^login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/console/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/console/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
-        - { path: ^/console/admin/, role: ROLE_ADMIN }
+       # - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY }
+       # - { path: ^/register, role: IS_AUTHENTICATED_ANONYMOUSLY }
+        #- { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY }
+       # - { path: ^/admin/, role: ROLE_ADMIN }
