Updated menu building event to allow bundles to insert enu items.
Added Configure event and base Menu Events.
Updated menu builder to insert event dispatcher and security component.
Updated menu configuration to inject additional classes.

--- a/Resources/config/menu.yml
+++ b/Resources/config/menu.yml
@@ -9,7 +9,7 @@ parameters:
 services:
     manhattan.console.menu_builder:
         class: Manhattan\Bundle\ConsoleBundle\Navbar\MenuBuilder
-        arguments: ["@knp_menu.factory"]
+        arguments: ["@knp_menu.factory", "@event_dispatcher", "@security.context"]
 
     manhattan.console.menu:
         class: Knp\Menu\MenuItem
@@ -19,7 +19,7 @@ services:
         scope: request
         tags:
             - { name: knp_menu.menu, alias: mainmenu }
-            
+
     manhattan.console.rightmenu:
         class: Knp\Menu\MenuItem
         factory_service: manhattan.console.menu_builder
