--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -1,3 +1,7 @@
+jms_security_extra:
+    secure_all_services: false
+    expressions: true
+
 security:
     encoders:
         Symfony\Component\Security\Core\User\User: plaintext
@@ -21,6 +25,7 @@ security:
         login:
             pattern:  ^/console/login$
             security: false
+            anonymous:  ~
 
         secured_area:
             pattern:    ^/console/
