--- a/composer.json
+++ b/composer.json
@@ -17,6 +17,7 @@
     "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": "2.*"
+        "symfony/framework-bundle": "2.*",
+        "friendsofsymfony/user-bundle": "dev-master"
     }
 }
