--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -20,7 +20,7 @@ fos_user_register:
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
-    prefix: /console/resetting
+    prefix: /console/forgot
 
 fos_user_change_password:
     resource: "@FOSUserBundle/Resources/config/routing/change_password.xml"
