--- a/Resources/config/tinymce.yml
+++ b/Resources/config/tinymce.yml
@@ -5,7 +5,7 @@ stfalcon_tinymce:
         simple:
             mode: "textareas"
             theme: "advanced"
-            theme_advanced_buttons1: "mylistbox,mysplitbutton,bold,italic,underline,separator,strikethrough,justifyleft,justifycenter,justifyright,justifyfull,bullist,numlist,undo,redo,link,unlink"
+            theme_advanced_buttons1: "mylistbox,mysplitbutton,bold,italic,underline,separator,strikethrough,justifyleft,justifycenter,justifyright,justifyfull,bullist,numlist,undo,redo,link,unlink,|,anchor,image,cleanup,code,|"
             theme_advanced_buttons2: ""
             theme_advanced_buttons3: ""
             theme_advanced_toolbar_location: "top"
