Updated routing with commented out Groups link. Update secuirty files. Updated UserBundle translations with field name update. Added users view and edit pages.

--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -1,7 +1,3 @@
-#_security:
-    #resource: "@ManhattanConsoleBundle/Controller/SecurityController.php"
-    #type:     annotation
-
 _console:
     resource: "@ManhattanConsoleBundle/Controller/ConsoleController.php"
     type:     annotation
@@ -13,6 +9,10 @@ fos_user_security:
 fos_user_profile:
     resource: "@FOSUserBundle/Resources/config/routing/profile.xml"
     prefix: /console/profile
+
+#fos_user_group:
+#    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
+#    prefix: /console/group
 
 fos_user_register:
     resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
