--- a/Resources/config/routing.yml
+++ b/Resources/config/routing.yml
@@ -18,9 +18,9 @@ fos_user_profile:
 #    resource: "@FOSUserBundle/Resources/config/routing/group.xml"
 #    prefix: /console/group
 
-fos_user_register:
-    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
-    prefix: /console/register
+#fos_user_register:
+#    resource: "@FOSUserBundle/Resources/config/routing/registration.xml"
+#    prefix: /console/register
 
 fos_user_resetting:
     resource: "@FOSUserBundle/Resources/config/routing/resetting.xml"
