--- a/composer.json
+++ b/composer.json
@@ -19,6 +19,7 @@
         "php": ">=5.3.2",
         "symfony/framework-bundle": "2.*",
         "friendsofsymfony/user-bundle": "dev-master",
-        "stfalcon/tinymce-bundle": "dev-master"
+        "knplabs/knp-markdown-bundle": "1.2.*@dev",
+        "ornj/markdown-bundle": "dev-master"
     }
 }
