Updated configuration to include a form field to build publish states as a choice form field.

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -39,6 +39,13 @@ services:
         tags:
             - { name: form.type, alias: preview_file }
 
+    form.type.publish_state:
+        class: Manhattan\Bundle\ConsoleBundle\Form\Type\PublishStateType
+        arguments:
+            - "%console.publish.states%"
+        tags:
+            - { name: form.type, alias: publish_state }
+
     manhattan.console.navbar:
         class: %manhattan.console.navbar.generic%
         arguments:
