Added Collection to the configuration of the MopaBootstrap bundle.

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -1,7 +1,13 @@
 # Bootstrap Bundle
 mopa_bootstrap:
     navbar: ~
-    form: ~
+    form:
+        collection:
+            widget_remove_btn:
+                icon: trash
+                icon_color: white
+            widget_add_btn:
+                icon: plus-sign
 
 parameters:
     manhattan.console.navbar.generic: Mopa\Bundle\BootstrapBundle\Navbar\GenericNavbar
