--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
-        "symfony/framework-bundle": ">=2.2.*",
+        "symfony/framework-bundle": ">=2.2",
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-markdown-bundle": "1.2.*@dev",
         "ornj/markdown-bundle": "dev-master"
