Updated defaults on Mopa field legends.

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -2,6 +2,8 @@
 mopa_bootstrap:
     navbar: ~
     form:
+        show_legend: false
+        show_child_legend: false
         collection:
             widget_remove_btn:
                 icon: trash
