Removed bad setting of tinymce import from extension. Updated config to import tinymce configuration. Updated tinymce configuration to work with updated tinymce. Updated User mapping so is correct.

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -54,3 +54,6 @@ fos_user:
     db_driver: orm
     firewall_name: secured_area
     user_class: Manhattan\Bundle\ConsoleBundle\Entity\User
+
+imports:
+    - { resource: "@ManhattanConsoleBundle/Resources/config/tinymce.yml" }
