--- a/Resources/config/doctrine/User.orm.yml
+++ b/Resources/config/doctrine/User.orm.yml
@@ -1,6 +1,6 @@
-ErrorApi\ManagerBundle\Entity\User:
+Manhattan\Bundle\ConsoleBundle\Entity\User:
     type:  entity
-    table: error_user
+    table: console_user
 
     repositoryClass: Manhattan\Bundle\ConsoleBundle\Entity\UserRepository
     fields:
