--- a/Resources/config/tinymce.yml
+++ b/Resources/config/tinymce.yml
@@ -1,18 +1,8 @@
 stfalcon_tinymce:
     include_jquery: false
-    textarea_class: "tinymce"
+    selector: ".tinymce" # with leading dot for a class or hash tag for ID of the textarea
     theme:
-        simple:
-            mode: "textareas"
-            theme: "advanced"
-            theme_advanced_buttons1: "mylistbox,mysplitbutton,bold,italic,underline,separator,strikethrough,justifyleft,justifycenter,justifyright,justifyfull,bullist,numlist,undo,redo,link,unlink,|,anchor,image,cleanup,code,|"
-            theme_advanced_buttons2: ""
-            theme_advanced_buttons3: ""
-            theme_advanced_toolbar_location: "top"
-            theme_advanced_toolbar_align: "left"
-            theme_advanced_statusbar_location: "bottom"
-            plugins: "fullscreen"
-            theme_advanced_buttons1_add: "fullscreen"
+        simple: ~
         advanced:
             theme: "advanced"
             plugins: "pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template"
