--- a/Resources/config/tinymce.yml
+++ b/Resources/config/tinymce.yml
@@ -3,26 +3,18 @@ stfalcon_tinymce:
     selector: ".tinymce"
     theme:
         simple: ~
-        advanced:
-            theme: "advanced"
-            plugins: "pagebreak,style,layer,table,save,advhr,advimage,advlink,emotions,iespell,inlinepopups,insertdatetime,preview,media,searchreplace,print,contextmenu,paste,directionality,fullscreen,noneditable,visualchars,nonbreaking,xhtmlxtras,template"
-            theme_advanced_buttons1: "save,newdocument,|,bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,styleselect,formatselect,fontselect,fontsizeselect"
-            theme_advanced_buttons2: "cut,copy,paste,pastetext,pasteword,|,search,replace,|,bullist,numlist,|,outdent,indent,blockquote,|,undo,redo,|,link,unlink,anchor,image,cleanup,help,code,|,insertdate,inserttime,preview,|,forecolor,backcolor"
-            theme_advanced_buttons3: "tablecontrols,|,hr,removeformat,visualaid,|,sub,sup,|,charmap,emotions,iespell,media,advhr,|,print,|,ltr,rtl,|,fullscreen"
-            theme_advanced_buttons4: "insertlayer,moveforward,movebackward,absolute,|,styleprops,|,cite,abbr,acronym,del,ins,attribs,|,visualchars,nonbreaking,template,pagebreak"
-            theme_advanced_toolbar_location: "top"
-            theme_advanced_toolbar_align: "left"
-            theme_advanced_statusbar_location: "bottom"
-            theme_advanced_resizing: true
-        medium:
-            mode: "textareas"
-            theme: "advanced"
-            plugins: "table,advhr,advlink,paste,xhtmlxtras,spellchecker"
-            theme_advanced_buttons1: "bold,italic,underline,strikethrough,|,justifyleft,justifycenter,justifyright,justifyfull,|,forecolor,backcolor,|,hr,removeformat,|,sub,sup,|,spellchecker"
-            theme_advanced_buttons2: "cut,copy,paste,pastetext,pasteword,|,bullist,numlist,|,undo,redo,|,link,unlink,anchor,cleanup,code,|,tablecontrols"
-            theme_advanced_buttons3: ""
-            theme_advanced_toolbar_location: "top"
-            theme_advanced_toolbar_align: "left"
-            theme_advanced_statusbar_location: ""
-            paste_auto_cleanup_on_paste: true
-            spellchecker_languages: "+English=en"
+        # Advanced theme with almost all enabled plugins
+        body:
+            plugins:
+                - "advlist autolink lists link image charmap print hr anchor pagebreak"
+                - "searchreplace wordcount visualblocks visualchars code fullscreen"
+                - "insertdatetime media nonbreaking save table contextmenu directionality"
+                - "template paste textcolor"
+            menubar: false
+            toolbar1: "undo redo | styleselect | bold italic | bullist numlist outdent indent"
+            toolbar2: "media | forecolor backcolor | alignleft aligncenter alignright alignjustify | link image"
+            image_advtab: true
+        excerpt:
+             plugins: ["bbcode, code, link, preview"]
+             menubar: false
+             toolbar1: "bold,italic,underline,undo,redo,removeformat,cleanup,code"
