--- a/composer.json
+++ b/composer.json
@@ -17,8 +17,8 @@
     "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
-        "mopa/bootstrap-bundle": "v3.0.0-beta2",
-        "twbs/bootstrap": "v3.0.0",
+        "mopa/bootstrap-bundle": "2.3.x-dev",
+        "twbs/bootstrap": "v2.3.2",
         "symfony/framework-bundle": ">=2.2",
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-markdown-bundle": "1.2.*@dev",
