--- a/composer.json
+++ b/composer.json
@@ -17,9 +17,9 @@
     "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
-        "mopa/bootstrap-bundle": "2.3.x-dev",
-        "twbs/bootstrap": "v2.3.2",
-        "symfony/framework-bundle": ">=2.2",
+        "symfony/framework-bundle": ">=2.3",
+        "knplabs/knp-paginator-bundle": "~2.3",
+        "knplabs/knp-menu-bundle": "~2.0@dev",
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-markdown-bundle": "1.2.*@dev",
         "ornj/markdown-bundle": "dev-master"
