Added setup for defining User Roles from a configuration array, rather than the form updating itself. Allows building of external users and roles to be added from the individual websites.

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -8,3 +8,9 @@ fos_user:
     from_email:
         address:        %console.users.from%
         sender_name:    %console.users.console_name%
+
+# Set Defaults for the Bundle's Configuration
+manhattan_console:
+    user_roles:
+        - { role: ROLE_ADMIN, name: User }
+        - { role: ROLE_SUPER_ADMIN, name: Administrator }
