--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -22,6 +22,7 @@ security:
 
         secured_area:
             request_matcher:    manhattan.console.subdomain_request_matcher
+            pattern: ^/(.*)
             form_login:
                 provider:       fos_userbundle
                 csrf_provider:  form.csrf_provider
@@ -37,3 +38,4 @@ security:
         - { path: ^/register, role: ROLE_SUPER_ADMIN, host: console.%domain% }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY, host: console.%domain% }
         - { path: ^/admin, role: ROLE_ADMIN, host: console.%domain% }
+        - { path: ^/, role: ROLE_USER, host: console.%domain% }
