--- a/composer.json
+++ b/composer.json
@@ -17,13 +17,17 @@
     "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
-        "mopa/bootstrap-bundle": "2.3.*@dev",
-        "twbs/bootstrap": "v2.3.2",
+        "mopa/bootstrap-bundle": "v3.0.0-beta3",
         "symfony/framework-bundle": ">=2.3",
         "knplabs/knp-paginator-bundle": "~2.3",
         "knplabs/knp-menu-bundle": "~2.0@dev",
         "friendsofsymfony/user-bundle": "dev-master",
         "knplabs/knp-markdown-bundle": "1.2.*@dev",
         "ornj/markdown-bundle": "dev-master"
+    },
+    "extra": {
+        "branch-alias": {
+            "dev-master": "tinymce"
+        }
     }
 }
