--- a/composer.json
+++ b/composer.json
@@ -27,7 +27,7 @@
     },
     "extra": {
         "branch-alias": {
-            "dev-master": "tinymce"
+            "dev-master": "tinymce-dev"
         }
     }
 }
