--- a/composer.json
+++ b/composer.json
@@ -18,6 +18,7 @@
     "require": {
         "php": ">=5.3.2",
         "mopa/bootstrap-bundle": "3.0.0-beta4",
+        "twbs/bootstrap": "v3.2.0",
         "knplabs/knp-paginator-bundle": "~2.3",
         "knplabs/knp-menu-bundle": "~2.0@dev",
         "friendsofsymfony/user-bundle": "dev-master",
