--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -11,3 +11,7 @@ manhattan_console:
     user_roles:
         - { role: ROLE_ADMIN, name: User }
         - { role: ROLE_SUPER_ADMIN, name: Administrator }
+
+# MOPA Bootstrap
+mopa_bootstrap:
+    menu: ~
