--- a/Resources/config/security.yml
+++ b/Resources/config/security.yml
@@ -37,5 +37,6 @@ security:
         - { path: ^/login$, role: IS_AUTHENTICATED_ANONYMOUSLY, host: console.%domain% }
         - { path: ^/register, role: ROLE_SUPER_ADMIN, host: console.%domain% }
         - { path: ^/resetting, role: IS_AUTHENTICATED_ANONYMOUSLY, host: console.%domain% }
+        - { path: ^/forgot, role: IS_AUTHENTICATED_ANONYMOUSLY, host: console.%domain% }
         - { path: ^/admin, role: ROLE_ADMIN, host: console.%domain% }
         - { path: ^/, role: ROLE_USER, host: console.%domain% }
