Added profile form type, which can then have specific fields attached for Users. Updated configuration to include Mopa Bootstrap config settings. Added profile form to services. Updated routing to include the Subdomain.

--- a/Resources/config/config.yml
+++ b/Resources/config/config.yml
@@ -15,3 +15,7 @@ manhattan_console:
 # MOPA Bootstrap
 mopa_bootstrap:
     menu: ~
+    form:
+        render_fieldset: false # default is true
+        render_collection_item: true # default is true
+        show_legend: false # default is true
