--- a/Resources/config/doctrine/User.orm.yml
+++ b/Resources/config/doctrine/User.orm.yml
@@ -24,6 +24,11 @@ Manhattan\Bundle\ConsoleBundle\Entity\User:
         updated_at:
             type: datetime
 
+    oneToMany:
+        socialAccounts:
+            targetEntity: Manhattan\Bundle\ConsoleBundle\Entity\User\SocialAccount
+            mappedBy: user
+
     lifecycleCallbacks:
         prePersist: [ onCreate ]
         preUpdate:  [ onUpdate ]
