--- a/Resources/config/doctrine/User.SocialAccount.orm.yml
+++ b/Resources/config/doctrine/User.SocialAccount.orm.yml
@@ -24,6 +24,4 @@ Manhattan\Bundle\ConsoleBundle\Entity\User\SocialAccount:
             joinColumn:
                 name: user_id
                 referencedColumnName: id
-            cascade:
-                - persist
-                - merge
+                onDelete: CASCADE
