--- a/Resources/config/doctrine/User.orm.yml
+++ b/Resources/config/doctrine/User.orm.yml
@@ -28,6 +28,8 @@ Manhattan\Bundle\ConsoleBundle\Entity\User:
         socialAccounts:
             targetEntity: Manhattan\Bundle\ConsoleBundle\Entity\User\SocialAccount
             mappedBy: user
+            orphanRemoval: true
+            cascade: [ persist, remove ]
 
     lifecycleCallbacks:
         prePersist: [ onCreate ]
