Updated Asset orm lifecycle setup. Added asset persist manager for updating images.

--- a/Resources/config/doctrine/Asset.orm.yml
+++ b/Resources/config/doctrine/Asset.orm.yml
@@ -15,15 +15,9 @@ Manhattan\Bundle\ConsoleBundle\Entity\Asset:
             length: 255
 
     lifecycleCallbacks:
-        prePersist:
-            - preUpload
-        preUpdate:
-            - preUpdateAsset
-        postPersist:
-            - upload
-        postUpdate:
-            - replace
-        preRemove:
-            - storeFilenameForRemove
-        postRemove:
-            - removeUpload
+        prePersist:  [ preUpload ]
+        preUpdate:   [ preUpdateAsset ]
+        postPersist: [ upload ]
+        postUpdate:  [ replace ]
+        preRemove:   [ storeFilenameForRemove ]
+        postRemove:  [ removeUpload ]
