--- a/travis.yml
+++ b/travis.yml
@@ -3,9 +3,12 @@ language: php
 php:
   - 5.3
   - 5.4
+  - 5.5
 
 before_script:
-  - curl -s http://getcomposer.org/installer | php
-  - php composer.phar install --dev
+  - composer self-update
+  - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi
+  - if [ "$deps" = "low" ]; then composer update --prefer-lowest; fi
+  - if [ "$deps" != "low" ]; then composer update --prefer-source; fi
 
 script: phpunit
