--- a/composer.json
+++ b/composer.json
@@ -17,7 +17,7 @@
     "target-dir": "Manhattan/Bundle/ConsoleBundle",
     "require": {
         "php": ">=5.3.2",
-        "mopa/bootstrap-bundle": "3.0.0-beta4",
+        "mopa/bootstrap-bundle": "3.*@dev",
         "twbs/bootstrap": "v3.2.0",
         "knplabs/knp-paginator-bundle": "~2.3",
         "knplabs/knp-menu-bundle": "~2.0@dev",
