--- a/travis.yml
+++ b/travis.yml
@@ -4,25 +4,40 @@ php:
   - 5.3
   - 5.4
   - 5.5
+  - 5.6
+  - hhvm
+
+env:
+  - SYMFONY_VERSION="~2.3||~3.0" SYMFONY_DEPRECATIONS_HELPER=weak
+
+sudo: false
 
 matrix:
-  fast_finish: true
+  allow_failures:
+    - env: SYMFONY_VERSION=dev-master
+    - php: hhvm
   include:
-    - php: 5.3
-      env: deps="low"
+    - php: 5.5
+      env: SYMFONY_VERSION=2.3.*
     - php: 5.5
       env: SYMFONY_VERSION=2.4.*
     - php: 5.5
+      env: SYMFONY_VERSION=2.5.*
+    - php: 5.5
       env: SYMFONY_VERSION=2.6.*
     - php: 5.5
-      env: SYMFONY_VERSION='2.7.*'
+      env: SYMFONY_VERSION=2.7.* SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 5.5
-      env: SYMFONY_VERSION='2.8.*@dev'
+      env: SYMFONY_VERSION=2.8.* SYMFONY_DEPRECATIONS_HELPER=weak
+    - php: 5.5
+      env: SYMFONY_VERSION=3.0.* SYMFONY_DEPRECATIONS_HELPER=weak
+    - php: 5.5
+      env: SYMFONY_VERSION=dev-master
 
 before_script:
   - composer self-update
-  - if [ "$SYMFONY_VERSION" != "" ]; then composer require --dev --no-update symfony/symfony=$SYMFONY_VERSION; fi
-  - if [ "$deps" = "low" ]; then composer update --prefer-lowest; fi
-  - if [ "$deps" != "low" ]; then composer update --prefer-source; fi
+  - sh -c 'if [ "${TRAVIS_PHP_VERSION}" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi;'
+  - composer require symfony/symfony:${SYMFONY_VERSION} --prefer-source
+  - composer install --dev --prefer-source
 
-script: phpunit
+script: ./bin/phpunit --coverage-text
