--- a/.travis.yml
+++ b/.travis.yml
@@ -40,4 +40,4 @@ before_script:
   - composer require symfony/symfony:${SYMFONY_VERSION} --prefer-source
   - composer install --dev --prefer-source
 
-script: ./bin/phpunit --coverage-text
+script: phpunit --coverage-text
