--- a/.travis.yml
+++ b/.travis.yml
@@ -37,7 +37,7 @@ matrix:
 before_script:
   - composer self-update
   - sh -c 'if [ "${TRAVIS_PHP_VERSION}" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi;'
-  - composer require symfony/symfony:${SYMFONY_VERSION} --prefer-source
+  - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
   - composer install --dev --prefer-source
 
 script: phpunit --coverage-text
