--- a/.travis.yml
+++ b/.travis.yml
@@ -28,16 +28,12 @@ matrix:
     - php: 5.5
       env: SYMFONY_VERSION=2.7.* SYMFONY_DEPRECATIONS_HELPER=weak
     - php: 5.5
-      env: SYMFONY_VERSION=2.8.* SYMFONY_DEPRECATIONS_HELPER=weak
-    - php: 5.5
-      env: SYMFONY_VERSION=3.0.* SYMFONY_DEPRECATIONS_HELPER=weak
-    - php: 5.5
       env: SYMFONY_VERSION=dev-master
 
 before_script:
   - composer self-update
   - sh -c 'if [ "${TRAVIS_PHP_VERSION}" != "hhvm" ]; then echo "memory_limit = -1" >> ~/.phpenv/versions/$(phpenv version-name)/etc/conf.d/travis.ini; fi;'
   - composer require symfony/framework-bundle:${SYMFONY_VERSION} --no-update
-  - composer install --dev --prefer-source
+  - composer install --prefer-source
 
 script: phpunit --coverage-text
